--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta
-      name="viewport"
-      content="width=device-width,initial-scale=1.0,interactive-widget=resizes-content"
-    />
+    <!-- 改為 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ROG GAMER VISA</title>
     <meta name="description" content="Create your card " />
     <meta property="og:title" content="ROG GAMER VISA `" />
