--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ROG GAMER VISA</title>
     <meta name="description" content="Create your card " />
-    <meta property="og:title" content="ROG GAMER VISA `" />
+    <meta property="og:title" content="ROG GAMER VISA" />
     <meta property="og:description" content="Create your card" />
   </head>
   <body>
